crates/pg_syntax/tests/snapshots/postgres_regress/join@187.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into tt4 values (0),(1),(9999);"
---
InsertStmt@0..38
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "tt4"
  Whitespace@15..16 " "
  SelectStmt@16..36
    Values@16..22 "values"
    Whitespace@22..23 " "
    Ascii40@23..24 "("
    List@24..25
      AConst@24..25
        Iconst@24..25 "0"
    Ascii41@25..26 ")"
    Ascii44@26..27 ","
    Ascii40@27..28 "("
    List@28..29
      AConst@28..29
        Iconst@28..29 "1"
    Ascii41@29..30 ")"
    Ascii44@30..31 ","
    Ascii40@31..32 "("
    List@32..36
      AConst@32..36
        Iconst@32..36 "9999"
  Ascii41@36..37 ")"
  Ascii59@37..38 ";"

