crates/pg_syntax/tests/snapshots/postgres_regress/join@189.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT a.f1\nFROM tt4 a\nLEFT JOIN (\n        SELECT b.f1\n        FROM tt3 b LEFT JOIN tt3 c ON (b.f1 = c.f1)\n        WHERE c.f1 IS NULL\n) AS d ON (a.f1 = d.f1)\nWHERE d.f1 IS NULL;"
---
SelectStmt@0..177
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..8 "a"
      Ascii46@8..9 "."
      Ident@9..11 "f1"
  Newline@11..12 "\n"
  From@12..16 "FROM"
  Whitespace@16..17 " "
  JoinExpr@17..156
    RangeVar@17..22
      Ident@17..20 "tt4"
      Whitespace@20..21 " "
      Alias@21..22
        Ident@21..22 "a"
    Newline@22..23 "\n"
    Left@23..27 "LEFT"
    Whitespace@27..28 " "
    Join@28..32 "JOIN"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    Newline@34..35 "\n"
    Whitespace@35..43 "        "
    RangeSubselect@43..140
      SelectStmt@43..133
        Select@43..49 "SELECT"
        Whitespace@49..50 " "
        ResTarget@50..54
          ColumnRef@50..54
            Ident@50..51 "b"
            Ascii46@51..52 "."
            Ident@52..54 "f1"
        Newline@54..55 "\n"
        Whitespace@55..63 "        "
        From@63..67 "FROM"
        Whitespace@67..68 " "
        JoinExpr@68..105
          RangeVar@68..73
            Ident@68..71 "tt3"
            Whitespace@71..72 " "
            Alias@72..73
              Ident@72..73 "b"
          Whitespace@73..74 " "
          Left@74..78 "LEFT"
          Whitespace@78..79 " "
          Join@79..83 "JOIN"
          Whitespace@83..84 " "
          RangeVar@84..89
            Ident@84..87 "tt3"
            Whitespace@87..88 " "
            Alias@88..89
              Ident@88..89 "c"
          Whitespace@89..90 " "
          On@90..92 "ON"
          Whitespace@92..93 " "
          Ascii40@93..94 "("
          AExpr@94..105
            ColumnRef@94..98
              Ident@94..95 "b"
              Ascii46@95..96 "."
              Ident@96..98 "f1"
            Whitespace@98..99 " "
            Ascii61@99..100 "="
            Whitespace@100..101 " "
            ColumnRef@101..105
              Ident@101..102 "c"
              Ascii46@102..103 "."
              Ident@103..105 "f1"
        Ascii41@105..106 ")"
        Newline@106..107 "\n"
        Whitespace@107..115 "        "
        Where@115..120 "WHERE"
        Whitespace@120..121 " "
        NullTest@121..133
          ColumnRef@121..125
            Ident@121..122 "c"
            Ascii46@122..123 "."
            Ident@123..125 "f1"
          Whitespace@125..126 " "
          Is@126..128 "IS"
          Whitespace@128..129 " "
          NullP@129..133 "NULL"
      Newline@133..134 "\n"
      Ascii41@134..135 ")"
      Whitespace@135..136 " "
      Alias@136..140
        As@136..138 "AS"
        Whitespace@138..139 " "
        Ident@139..140 "d"
    Whitespace@140..141 " "
    On@141..143 "ON"
    Whitespace@143..144 " "
    Ascii40@144..145 "("
    AExpr@145..156
      ColumnRef@145..149
        Ident@145..146 "a"
        Ascii46@146..147 "."
        Ident@147..149 "f1"
      Whitespace@149..150 " "
      Ascii61@150..151 "="
      Whitespace@151..152 " "
      ColumnRef@152..156
        Ident@152..153 "d"
        Ascii46@153..154 "."
        Ident@154..156 "f1"
  Ascii41@156..157 ")"
  Newline@157..158 "\n"
  Where@158..163 "WHERE"
  Whitespace@163..164 " "
  NullTest@164..176
    ColumnRef@164..168
      Ident@164..165 "d"
      Ascii46@165..166 "."
      Ident@166..168 "f1"
    Whitespace@168..169 " "
    Is@169..171 "IS"
    Whitespace@171..172 " "
    NullP@172..176 "NULL"
  Ascii59@176..177 ";"

