crates/pg_syntax/tests/snapshots/postgres_regress/join@194.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into tt5 values(1, 10);"
---
InsertStmt@0..30
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "tt5"
  Whitespace@15..16 " "
  SelectStmt@16..28
    Values@16..22 "values"
    Ascii40@22..23 "("
    List@23..28
      AConst@23..24
        Iconst@23..24 "1"
      Ascii44@24..25 ","
      Whitespace@25..26 " "
      AConst@26..28
        Iconst@26..28 "10"
  Ascii41@28..29 ")"
  Ascii59@29..30 ";"

