crates/pg_syntax/tests/snapshots/postgres_regress/join@199.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from tt5,tt6 where tt5.f1 = tt6.f1 and tt5.f1 = tt5.f2 - tt6.f2;"
---
SelectStmt@0..73
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeVar@14..17
    Ident@14..17 "tt5"
  Ascii44@17..18 ","
  RangeVar@18..21
    Ident@18..21 "tt6"
  Whitespace@21..22 " "
  Where@22..27 "where"
  Whitespace@27..28 " "
  BoolExpr@28..72
    AExpr@28..43
      ColumnRef@28..34
        Ident@28..31 "tt5"
        Ascii46@31..32 "."
        Ident@32..34 "f1"
      Whitespace@34..35 " "
      Ascii61@35..36 "="
      Whitespace@36..37 " "
      ColumnRef@37..43
        Ident@37..40 "tt6"
        Ascii46@40..41 "."
        Ident@41..43 "f1"
    Whitespace@43..44 " "
    And@44..47 "and"
    Whitespace@47..48 " "
    AExpr@48..72
      ColumnRef@48..54
        Ident@48..51 "tt5"
        Ascii46@51..52 "."
        Ident@52..54 "f1"
      Whitespace@54..55 " "
      Ascii61@55..56 "="
      Whitespace@56..57 " "
      AExpr@57..72
        ColumnRef@57..63
          Ident@57..60 "tt5"
          Ascii46@60..61 "."
          Ident@61..63 "f2"
        Whitespace@63..64 " "
        Ascii45@64..65 "-"
        Whitespace@65..66 " "
        ColumnRef@66..72
          Ident@66..69 "tt6"
          Ascii46@69..70 "."
          Ident@70..72 "f2"
  Ascii59@72..73 ";"

